--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.0",
+    "highcharts": "^6.0.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-highcharts": "^13.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.16",
